added animation to header

--- a/css/style.css
+++ b/css/style.css
@@ -33,4 +33,109 @@ body {
   background-size: cover;
   background-position: top;
   clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
+  position: relative;
 }
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.logo {
+  height: 35px;
+}
+
+.logo:hover{
+  /* transform: rotate(360deg); */
+
+  animation-name: rotate360;
+  animation-duration: .7s;
+  /* animation-timing-function: ease-out; */
+}
+
+.text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+
+  backface-visibility: hidden;
+}
+
+.heading-primary-main {
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 35px;
+
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+
+/* animation-iteration-count: 3; */
+
+  /* animation-delay: 3s; */
+}
+
+.heading-primary-sub {
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 17.4px;
+
+  animation-name: moveInRight;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+
+@keyframes moveInLeft {
+ 0%{
+opacity: 0;
+transform: translateX(-100px);
+ }
+
+ /* 60%{
+  transform: rotate(180deg);
+ } */
+
+ 80%{
+transform: translateX(10px);
+ }
+ 
+ 100%{
+opacity: 1;
+transform: translate(0);
+ }
+}
+
+@keyframes moveInRight {
+  0%{
+ opacity: 0;
+ transform: translateX(100px);
+  }
+ 
+  80%{
+ transform: translateX(-10px);
+  }
+  
+  100%{
+ opacity: 1;
+ transform: translate(0);
+  }
+ }
+
+ @keyframes rotate360{
+  0%{
+    transform: rotate(0deg);
+  }
+
+  100%{
+    transform: rotate(360deg);
+  }
+ }
