--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,11 @@ body {
   height: 35px;
 }
 
-.logo:hover{
+.logo:hover {
   /* transform: rotate(360deg); */
 
   animation-name: rotate360;
-  animation-duration: .7s;
+  animation-duration: 0.7s;
   /* animation-timing-function: ease-out; */
 }
 
@@ -59,6 +59,8 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
+  margin-bottom: 60px;
 }
 
 .heading-primary {
@@ -66,6 +68,7 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden;
+  margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -78,7 +81,7 @@ body {
   animation-duration: 1s;
   animation-timing-function: ease-out;
 
-/* animation-iteration-count: 3; */
+  /* animation-iteration-count: 3; */
 
   /* animation-delay: 3s; */
 }
@@ -95,47 +98,113 @@ body {
 }
 
 @keyframes moveInLeft {
- 0%{
-opacity: 0;
-transform: translateX(-100px);
- }
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
 
- /* 60%{
+  /* 60%{
   transform: rotate(180deg);
  } */
 
- 80%{
-transform: translateX(10px);
- }
- 
- 100%{
-opacity: 1;
-transform: translate(0);
- }
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
 
 @keyframes moveInRight {
-  0%{
- opacity: 0;
- transform: translateX(100px);
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
   }
- 
-  80%{
- transform: translateX(-10px);
-  }
-  
-  100%{
- opacity: 1;
- transform: translate(0);
-  }
- }
 
- @keyframes rotate360{
-  0%{
+  80% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes rotate360 {
+  0% {
     transform: rotate(0deg);
   }
 
-  100%{
+  100% {
     transform: rotate(360deg);
   }
- }
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all 0.2s;
+  position: relative;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-white::after{
+  background-color: #fff;
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+.btn-animated{
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards;
+}
