--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,23 @@ body {
     animation-duration: 1s;
     animation-timing-function: ease-out; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all .2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.u-center-text {
+  text-align: center; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -150,3 +167,8 @@ body {
     transform: translate(-50%, -50%);
     text-align: center;
     margin-bottom: 6rem; }
+
+.section-about {
+  background-color: #f7f7f7f;
+  padding: 25rem 0;
+  margin-top: -20vh; }
