--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,13 +2,24 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-@import "base/base";
 @import "base/animations";
+@import "base/base";
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/button";
+@import "components/card";
+@import "components/composition";
+@import "components/feature-box";
+@import "components/form";
+@import "components/popup";
+@import "components/story";
 
+@import "layout/footer";
+@import "layout/grid";
 @import "layout/header";
+@import "layout/navigation";
 
 @import "pages/home";
+
